WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219502
[JSC] not using std::make_pair for workaround of (possibly) ASan bug
https://bugs.webkit.org/show_bug.cgi?id=219502
Summary
[JSC] not using std::make_pair for workaround of (possibly) ASan bug
Yusuke Suzuki
Reported
2020-12-03 12:06:43 PST
[JSC] not using std::make_pair for workaround of (possibly) ASan bug
Attachments
Patch
(6.18 KB, patch)
2020-12-03 12:09 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-12-03 12:09:47 PST
Created
attachment 415320
[details]
Patch
Robin Morisset
Comment 2
2020-12-03 12:12:01 PST
Comment on
attachment 415320
[details]
Patch r=me
Mark Lam
Comment 3
2020-12-03 12:20:41 PST
r=me too
Yusuke Suzuki
Comment 4
2020-12-03 12:24:33 PST
<
rdar://problem/71642789
>
Yusuke Suzuki
Comment 5
2020-12-03 15:17:20 PST
imported/w3c/web-platform-tests/html/canvas/element/imagebitmap/createImageBitmap-in-worker-transfer.html is flaky test.
EWS
Comment 6
2020-12-03 15:20:39 PST
Committed
r270411
: <
https://trac.webkit.org/changeset/270411
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415320
[details]
.
Alexey Proskuryakov
Comment 7
2020-12-06 11:05:26 PST
Comment on
attachment 415320
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=415320&action=review
> Source/JavaScriptCore/ChangeLog:10 > + However, this is inside std::make_pair, and it looks like a bug in ASan.
This would be quite unusual. Are you planning to file a bug to investigate the root cause?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug