[JSC] not using std::make_pair for workaround of (possibly) ASan bug https://bugs.webkit.org/show_bug.cgi?id=219502 <rdar://71642789>

Reviewed by Robin Morisset.

We are getting ASan crash in LayoutTests/fast/canvas/webgl/array-unit-tests.html after r269574.
However, this is inside std::make_pair, and it looks like a bug in ASan.
To workaround this for now, we avoid using std::make_pair and instead just using C++ uniform initialization.

* runtime/JSArrayBufferPrototype.cpp:


Canonical link: https://commits.webkit.org/232094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270411 268f45cc-cd09-0410-ab3c-d52691b4dbfc